--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,16 +13,16 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079965.md#1" title="世界新闻日 中共打压新闻自由殃及全球生命""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png">&nbsp;</a>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wdr216.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081251.md#1">海拔4440公尺 世界最高邮局在印度</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081251.md#1">海拔4440公尺 世界最高邮局在印度</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081342.md#1">虐待殴打八旬老人 南通保姆被判刑</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080957.md#1">美东北7州建“区域采购联盟” 尽量选择美国制造</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080957.md#1">美东北7州建“区域采购联盟” 尽量选择美国制造</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080926.md#1">【现场视频】经历干旱冰雹后 云南又现日晕</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
-<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078195.md#1">文革重来？湖北刘艳丽因言获罪被判四年</a><br>
+<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078123.md#1">网民借“潘金莲”讽刺中共推卸疫情责任</a><br>
